--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"node": ">=6"
 	},
 	"scripts": {
-		"test": "xo && ava"
+		"test": "xo --ignore index.d.ts && ava"
 	},
 	"files": [
 		"index.js",
