--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"node": ">=6"
 	},
 	"scripts": {
-		"test": "xo && ava"
+		"test": "xo && ava && tsd-check"
 	},
 	"files": [
 		"index.js",
@@ -36,6 +36,7 @@
 	},
 	"devDependencies": {
 		"ava": "*",
+		"tsd-check": "^0.1.0",
 		"xo": "*"
 	},
 	"xo": {
