--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"node": ">=8"
 	},
 	"scripts": {
-		"test": "xo && nyc ava && tsd"
+		"test": "xo && ava && tsd"
 	},
 	"files": [
 		"index.js",
@@ -36,7 +36,6 @@
 	},
 	"devDependencies": {
 		"ava": "^1.4.1",
-		"nyc": "^14.0.0",
 		"tsd": "^0.7.2",
 		"xo": "^0.24.0"
 	}
