--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
 	"description": "Read and parse a JSON file",
 	"license": "MIT",
 	"repository": "sindresorhus/load-json-file",
+	"funding": "https://github.com/sponsors/sindresorhus",
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
-		"url": "sindresorhus.com"
+		"url": "https://sindresorhus.com"
 	},
+	"type": "module",
+	"exports": "./index.js",
 	"engines": {
-		"node": ">=8"
+		"node": "^12.20.0 || ^14.13.1 || >=16.0.0"
 	},
 	"scripts": {
 		"test": "xo && ava && tsd"
@@ -25,18 +28,11 @@
 		"parse",
 		"file",
 		"fs",
-		"graceful",
 		"load"
 	],
-	"dependencies": {
-		"graceful-fs": "^4.1.15",
-		"parse-json": "^5.0.0",
-		"strip-bom": "^4.0.0",
-		"type-fest": "^0.6.0"
-	},
 	"devDependencies": {
-		"ava": "^2.1.0",
-		"tsd": "^0.7.3",
-		"xo": "^0.24.0"
+		"ava": "^3.15.0",
+		"tsd": "^0.17.0",
+		"xo": "^0.44.0"
 	}
 }
